DTC.web/src/assets/DTCHeader/DTCHeader.css
img.backdrop {
  position: fixed; /* Make the image fixed to the viewport */
  top: 0;
  left: 0;
  min-width: 100vw;
  min-height: 100vh;
  width: auto;
  height: auto;
  object-fit: cover;
  filter: grayscale(100%); /* Desaturate the image */
  opacity: 0.044; /* Correct opacity to a value between 0 (fully transparent) and 1 (fully opaque) */
  z-index: -1; /* Ensure the image stays behind other content */
}

.heading {
  font-weight: bold;
  font-size: 30px;
  padding: 15px;
  background-color: rgb(121, 27, 27);
  border-radius: 20px;
  position: static;
  margin-left: 8px;
  user-select: none;
  letter-spacing: 1px;
  transition: 0.5s;
}

.heading-logo {
  visibility: "hidden";
  font-size: 0;
}

@media (max-width: 815px) {
  .heading {
    font-size: 12px;
    padding: 10px;
    margin-right: -10px;
    margin-left: 5px;
    padding-top: 12px;
    padding-bottom: 12px;
    border-radius: 12px;
  }
}

.search-panel {
  position: static;
  height: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: 15px;
}

#num-decks {
  display: flex;
  justify-content: center;
  padding-top: 140px;
}

.num-results {
  color: rgb(29, 14, 41);
  font-size: 20px;
  text-wrap: nowrap;
  margin-top: -3px;
  margin-bottom: -3px;
}

input {
  color: white;
  font-size: 18px;
  background-color: rgb(121, 27, 27);
  border-radius: 50px;
  border: none;
  outline: none;
  width: 350px;
  height: 35px;
  text-indent: 12px;
  padding-right: 58px;
  transition: 0.5s;
}

input::placeholder {
  color: rgb(179, 143, 143);
}

@media (max-width: 965px) {
  input {
    transition: 0.5s;
    width: 200px;
  }
}

button {
  font-size: 18px;
  border-radius: 20px;
  border: none;
  width: 40px;
  height: 35px;
  margin-right: 5px;
  margin-left: 5px;
  background-color: transparent;
  color: rgb(245, 245, 245);
  text-align: center;
  cursor: pointer;
  outline: none;
}

button:hover {
  background-color: rgb(121, 27, 27);
}

button:active {
  background-color: rgb(146, 50, 50);
}

.button-clear {
  position: relative;
  right: 42px;
}

.profile-panel {
  flex-direction: column;
  position: fixed;
  right: 20px;
}

.profile-button {
  font-size: 25px;
  height: 45px;
  width: 48px;
  border-radius: 30px;
}

.user-popup {
  color: transparent;
  background-color: transparent;
  position: fixed;
  font-family: "Arial";
  border-radius: 20px;
  padding: 8px;
  transition: 0.2s;
  font-size: 14.5px;
  letter-spacing: 0.5px;
  padding-left: 10px;
  padding-right: 10px;
  font-weight: bold;
  right: 8px;
  visibility: hidden;
}

.profile-button:hover + .user-popup {
  color: rgb(231, 195, 195);
  background-color: rgb(121, 27, 27);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
  visibility: visible;
}

.create-deck-button {
  font-size: 23px;
  height: 45px;
  width: 48px;
  border-radius: 30px;
  padding-left: 10px;
}

.heading-logo {
  visibility: hidden;
}

@media (max-width: 650px) {
  .heading {
    background-color: rgb(67, 5, 5);
    border-radius: 30px;
    padding: 13px;
    transition: 0s;
  }
  .heading:hover {
    background-color: rgb(121, 27, 27);
  }
  .heading:active {
    background-color: rgb(146, 50, 50);
  }
  .heading-txt {
    display: none;
    transition: 0.5s;
    font-size: 0px;
  }
  .heading-logo {
    visibility: visible;
    font-size: 15px;
  }
  .profile-button,
  .create-deck-button {
    border-radius: 25px;
    font-size: 15px;
    width: 42px;
    height: 38px;
  }
  .search-panel {
    margin-right: -40px;
  }
  input {
    transition: 0.5s;
    width: 100px;
    font-size: 12px;
  }

  .user-popup {
    font-size: 11px;
  }
}

@media (max-width: 400px) {
  .profile-panel {
    position: static;
    margin-left: -50px;
  }
}

.checkbox {
  display: none;
}

.checkbox-toggle {
  max-width: 42px;
  min-width: 42px;
  height: 22px;
  background-image: linear-gradient(
    to right,
    rgb(255, 123, 0),
    rgb(201, 39, 39)
  );
  border-radius: 50px;
  cursor: pointer;
  position: relative;
  right: 50px;
}

.checkbox-toggle::before {
  position: absolute;
  background-color: rgb(255, 251, 234);
  width: 16px;
  height: 16px;
  border-radius: 50px;
  margin-left: 3px;
  margin-top: 3px;
  transition: 0.2s;

  content: "D";
  font-family: sans-serif;
  font-size: 13px;
  font-weight: bolder;
  text-align: center;
}

.checkbox:checked + .checkbox-toggle::before {
  transform: translate(20px);
  content: "C";
}

.tooltip {
  visibility: hidden;
  color: rgb(194, 194, 194);
  background-color: rgb(39, 39, 39);
  position: fixed;
  font-family: "Arial";
  border-radius: 3px;
  padding: 4px;
  font-size: 11px;
  outline: 1px solid rgb(194, 194, 194);
  z-index: 9999;
}

